# handler/createOpening.go
@@ -15,9 +15,9 @@ import (
 // @Accept json
 // @Produce json
 // @Param request body CreateOpeningRequest true "Request body"
-// @Success 200 {Object} CreateOpeningResponse
-// @Failure 400 {Object} ErrorResponse
-// @Failure 500 {Object} ErrorResponse
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
 // @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
